--- a/app/templates/voting.html
+++ b/app/templates/voting.html
@@ -10,7 +10,7 @@
 	<div class="page-title-row">
 		<h1><i class="fas fa-vote-yea"></i> Voting Form</h1>
 		{% if is_admin_view %}
-		<a href="{{ url_for('voting_bp.voting_nps') }}" class="icon-btn trend-btn" title="NPS Trend">
+		<a href="{{ url_for('voting_bp.voting_nps') }}" class="trend-btn" title="NPS Trend">
 			<i class="fas fa-chart-line"></i>
 		</a>
 		{% endif %}
